# medical-image-segmentation

./: .gitignore  Dockerfile  README.md  build.sh  build_and_run.sh  entrypoint.sh  pyproject.toml  requirements.txt  run.sh
doc/: base_model.md  baseline_model.md  data_acquisition.md  docker_guide.md  evaluation_criteria.md  model_evaluation.md  project_structure.md  references.md  user_guide.md
notebooks/: baseline_model.ipynb  data_preparation.ipynb  dataset_analysis.ipynb  download_dataset.ipynb  initial_model.ipynb  model.ipynb  model_evaluation.ipynb  test.ipynb
src/: dataloader.py  download_dataset.py  gradio_ui.py  main.py  metrics.py  util.py
src/model/: common.py  ensemble.py
